--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.omkelderman</groupId>
     <artifactId>osu-db-parser</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>osu-db-parser</name>
@@ -32,7 +32,7 @@
         <developerConnection>scm:git:git@github.com:omkelderman/osuDbParser.git</developerConnection>
         <connection>scm:git:git@github.com:omkelderman/osuDbParser.git</connection>
         <url>https://github.com/omkelderman/osuDbParser</url>
-        <tag>HEAD</tag>
+        <tag>v1.0.0</tag>
     </scm>
 
     <distributionManagement>
