--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.omkelderman</groupId>
     <artifactId>osu-db-parser</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
     <packaging>jar</packaging>
 
     <name>osu-db-parser</name>
@@ -36,7 +36,7 @@
         <developerConnection>scm:git:git@github.com:omkelderman/osuDbParser.git</developerConnection>
         <connection>scm:git:git@github.com:omkelderman/osuDbParser.git</connection>
         <url>https://github.com/omkelderman/osuDbParser</url>
-        <tag>HEAD</tag>
+        <tag>v1.2.1</tag>
     </scm>
 
     <distributionManagement>
